# autogen-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  embeddings.py  pyproject.toml  team_history.json  team_state.json
alembic/: env.py
alembic/versions/: 91e4c9317324_first_commit.py  cecb8fc13e58_first_commit.py
src/: main.py
src/api/routers/: __init__.py  chat.py  health.py
src/core/: connection.py  dependencies.py  logging.py  security.py  settings.py
src/events/: lifespan.py
src/models/: run.py  run_model.py
src/routers/: __init__.py  chat.py  chat_router.py  health.py  health_router.py
src/schemas/: health.py
src/services/: chat.py  chat_service.py  run.py  run_service.py  vector_search_service.py  vector_store_service.py
src/teams/: selector_group_chat.py  single_agent.py  single_agent_team.py
src/tools/: api_weather_tool.py  vector_search_tool.py  weather_tool.py
src/utils/: http_client.py  model_client.py  team_history.py
