[project]
name = "autogen-backend"
version = "0.1.0"
description = "autogen-backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "autogen-agentchat>=0.5.1",
    "autogen-ext[azure,openai]>=0.5.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "langchain-postgres>=0.0.14",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.8.1",
    "pypdf>=5.4.0",
    "rapidocr-onnxruntime>=1.4.4",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 125

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "A",    # flake8-builtins (avoid shadowing built-ins)
    "C4",   # flake8-comprehensions (optimize list comprehensions)
    "T20",  # flake8-print (avoid print statements)
    "D",    # flake8-docstrings (enforce docstring standards)
    "N",    # pep8-naming (enforce consistent naming)
    "TCH",  # flake8-type-checking (ensure type annotations)
    "ANN",  # flake8-annotations (ensure consistent type annotations)
    "PL",   # Pylint (catch design/code smells)
    "TRY",  # tryceratops (improve exception handling)
    "ARG",  # flake8-unused-arguments (catch unused arguments)
]

ignore = [
    "D100",  # Ignore missing docstring in public module
    "D203",  # Ignore blank line before class conflicts
    "D213",  # Ignore multi-line summary position conflicts
    "D401",  # Ignore first line of docstring should be in imperative mood
]
